# horizon

./: .gitignore  Cargo.toml  README.md  build.sh  build_token.sh  dev_bos_deploy.sh  dev_deploy.sh  dev_widget_deploy.sh  dirty_deploy.sh  docker-compose.yml  indexer_run.sh  seed.sh  verify_investor.sh
.husky/: pre-commit
aggregator/: Cargo.toml  README.md  contact.csv
aggregator/src/: claims.rs  contribution.rs  investor.rs  lib.rs  main.rs  project.rs  request.rs  vendor.rs
agregator/: Cargo.toml
airtable-sync/: Cargo.toml  README.md
airtable-sync/src/: contributors.rs  lib.rs  main.rs  projects.rs
api/: Cargo.toml  README.md
api/src/: auth.rs  fetching.rs  lib.rs  main.rs
api/src/chain_actions/: mod.rs
api/src/routes/: atlas.rs  decrypt.rs  encrypt.rs  mod.rs  transactions.rs
api/src/routes/data/: claims.rs  contributions.rs  credits.rs  investors.rs  metrics.rs  mod.rs  perks.rs  projects.rs  proposals.rs  requests.rs  vendors.rs
app/: .eslintrc.cjs  .rtx.toml  components.json  next.config.mjs  package.json  pnpm-lock.yaml  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json
app/email-templates/: pnpm-lock.yaml
app/email-templates/emails/: verification.tsx
app/src/: env.mjs  middleware.ts
app/src/app/: global-error.tsx  global-search-bar.tsx  globals.css  home-loader.tsx  home.tsx  layout.tsx  list-page-layout.tsx  nav-links.tsx  navbar.tsx  page.tsx  progress-bar.tsx  providers.tsx  sign-in.tsx  sign-out.tsx  stats-loader.tsx  user-menu.tsx
app/src/components/: availability.tsx  backer.tsx  banner-shell.tsx  contract.tsx  contributor.tsx  description.tsx  detail.tsx  empty.tsx  external-link.tsx  file-description.tsx  footer.tsx  handle.tsx  icon.tsx  info-tooltip.tsx  ipfs-image.tsx  motion.tsx  (+15 more)
awesome-near-fetcher/: Cargo.toml
awesome-near-fetcher/src/: main.rs
backup/: README.md  backup.sh  install-pg-dump.sh
bos-components/: package-lock.json  pnpm-lock.yaml  types.d.ts
bos-components/src/: Badge.jsx  BadgeList.jsx  Card.jsx  CreatePage.jsx  Dashboard.jsx  DescriptionArea.jsx  Header.jsx  IconList.jsx  Inbox.jsx  Index.jsx  IpfsFilesUpload.jsx  List.jsx  Logo.jsx  NameAndAccount.jsx  NavbarControl.jsx  Sidebar.jsx  SocialLinks.jsx  TNCForm.jsx  TabSelector.jsx  Tags.jsx  Tooltip.jsx
contract/: Cargo.toml  README.md
contract/src/: claim.rs  contribution.rs  contributor.rs  dec_serde.rs  entity.rs  events.rs  incentives.rs  investor.rs  lib.rs  project.rs  proposal.rs  request.rs  vendor.rs
data/: tooltips.json
db/: Cargo.toml
db/src/: lib.rs
db/src/backers/: mod.rs
indexer/: Cargo.toml  README.md  build.rs
indexer/src/: configs.rs  lib.rs  main.rs  store.rs
migrations/: 20230517111547_init.down.sql  20230517111547_init.up.sql  20230518194123_add_block_height.down.sql  20230518194123_add_block_height.up.sql  20230518195627_add_block_height_id.down.sql  20230518195627_add_block_height_id.sql  20230518212101_add_block_height_index.down.sql  20230518212101_add_block_height_index.sql  20230518212647_drop_block_height_and_create_last_visited.down.sql  20230518212647_drop_block_height_and_create_last_visited.up.sql  20230519001927_add_timestamp_index.down.sql  20230519001927_add_timestamp_index.sql  20230519015427_recreate_transaction_table.sql  20230531085624_add_entity_tables.down.sql  20230531085624_add_entity_tables.up.sql  20230531102123_alter_types.down.sql  20230531102123_alter_types.sql  20230602105644_add_claims_table.down.sql  20230602105644_add_claims_table.sql  20230605105817_add_completion_column.down.sql  20230605105817_add_completion_column.up.sql  20230605115215_add_completion_column_to_all.down.sql  20230605115215_add_completion_column_to_all.up.sql  20230605165502_add_credits.down.sql  20230605165502_add_credits.up.sql  20230609131836_add_distribution_field.down.sql  20230609131836_add_distribution_field.up.sql  20230626095636_add_dev_and_product_type.down.sql  20230626095636_add_dev_and_product_type.up.sql  20230626102731_use_array_product_type.down.sql  20230626102731_use_array_product_type.up.sql  20230626105405_add_company_size.down.sql  20230626105405_add_company_size.up.sql  20230626110229_completion_revamp.down.sql  20230626110229_completion_revamp.up.sql  20230814123142_emails.down.sql  20230814123142_emails.up.sql  20230822111634_contracts_graph.down.sql  20230822111634_contracts_graph.up.sql  20230822112533_completion_update.down.sql  (+9 more)
scripts/: README.md  add_investor.sh  add_project.sh  add_vendor.sh  remove_claim.sh  remove_contribution.sh  remove_investor.sh  remove_project.sh  remove_proposal.sh  remove_request.sh  remove_vendor.sh  single_widget_deploy.sh  verify_investor.sh  verify_vendor.sh  widget_delete.sh
seed/: Cargo.toml
seed/src/: main.rs
src/: contribution.rs  contributor.rs  entity.rs  events.rs  lib.rs  utils.rs
time-metrics/: .gitignore  Cargo.toml  README.md  backup.sql  docker-compose.yml
time-metrics/src/: main.rs  metrics.rs
token/: Cargo.toml
token/src/: lib.rs
web/: .prettierignore  astro.config.mjs  components.json  next.config.mjs  package.json  pnpm-lock.yaml  prettier.config.cjs  tailwind.config.mjs  tailwind.config.ts  tsconfig.json
web/src/: env.mjs
widgets/: README.md  package-lock.json  package.json  types.d.ts
widgets/src/: ActiveIndicator.jsx  AdminEntityAccountIdInput.jsx  AdminList.jsx  BadgeList.jsx  Card.Partner.jsx  Card.jsx  CardMenu.jsx  Contribution.jsx  ContributionDetail.jsx  ContributionForm.jsx  ContributionList.jsx  ContributionPage.jsx  ContributionRequest.jsx  ContributionRequestForm.jsx  ContributionRequestList.jsx  ContributionTypeInput.jsx  ContributionsPage.jsx  Contributor.jsx  ContributorForm.jsx  ContributorList.jsx  CotributorForm.jsx  CreateNewInput.jsx  CreatePage.jsx  CreateServiceRequest.jsx  CreateServiceRequest_Step1.jsx  Dashboard.jsx  DateInput.jsx  DescriptionArea.jsx  DescriptionInput.jsx  Entity.jsx  EntityForm.jsx  EntityList.jsx  EntityOneLineProfile.jsx  EntityPage.jsx  EntityTypeInput.jsx  Filter.jsx  Header.jsx  HomePage.jsx  IconList.jsx  Inbox.jsx  (+41 more)
(+5767 files in other folders)
