[workspace]
members = ["contract", "seed", "token", "awesome-near-fetcher", "aggregator"]
exclude = ["api", "indexer", "project-data-cleaner"]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true
