[workspace]
members = [
  "contract",
  "aggregator",
  "api",
  "indexer",
  "airtable-sync",
  "time-metrics",
  "db",
]
resolver = "2"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
debug = false
panic = "abort"
overflow-checks = true
