[package]
name = "aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
csv = "1.2.1"
futures = "0.3.28"
horizon = { version = "0.1.0", path = "../contract" }
itertools = "0.10.5"
near-account-id = "0.16.1"
near-crypto = "0.16.1"
near-jsonrpc-client = "0.5.1"
near-jsonrpc-primitives = "0.16.1"
near-primitives = "0.16.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "json",
] }
tokio = { version = "1.19", features = ["full"] }
