[package]
name = "airtable-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
reqwest = { version = "0.11.18", features = ["json", "tokio-rustls"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "json"] }
tokio = { version = "1.28.2", features = ["full"] }
