[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.15", features = ["macros"] }
base58 = "0.2.0"
borsh = "0.10.3"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
near-account-id = "0.16.1"
reqwest = { version = "0.11.16", features = ["json", "tokio-rustls"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sodiumoxide = "0.2.7"
sqlx = { version = "0.6.3", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "json",
] }
tokio = { version = "1.27.0", features = ["full"] }
