[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
base58 = "0.2.0"
borsh = "1.1.0"
chrono = "0.4.31"
db = { version = "0.1.0", path = "../db" }
dotenvy = "0.15.7"
ed25519-dalek = "1.0.1"
futures = "0.3.28"
hex = "0.4.3"
itertools = { workspace = true }
near-account-id = { workspace = true }
near-crypto = { workspace = true }
near-jsonrpc-client = { workspace = true }
near-jsonrpc-primitives = { workspace = true }
near-primitives = { workspace = true }
num-traits = "0.2.17"
reqwest = { version = "0.11.22", features = ["json", "tokio-rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
sodiumoxide = "0.2.7"
sqlx = { workspace = true }
tokio = { workspace = true }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
