[package]
name = "indexer"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
clap = { version = "4.2.7", features = ["derive"] }
futures = "0.3.28"
itertools = "0.10.5"
near-lake-framework = "0.7.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "json",
] }
tokio = { version = "1.19.2", features = [
  "sync",
  "time",
  "macros",
  "rt-multi-thread",
] }
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
