[package]
name = "time-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.3"
aws-sdk-s3 = "0.28.0"
chrono = "0.4.26"
csv = "1.2.2"
futures = "0.3.28"
num-traits = "0.2.15"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
sqlx = { version = "0.6.3", features = ["bigdecimal", "runtime-tokio-native-tls", "postgres", "json"] }
tokio = { version = "1.29.1", features = ["full"] }
